--- a/content/gliderStocks.qmd
+++ b/content/gliderStocks.qmd
@@ -1,17 +1,48 @@
 ---
-title: Incorporating glider data in a species distribution modeling framework
+title: Incorporating slow-moving recorder data in a species distribution modeling framework
+subtitle: "Team: Janelle Badger, Yvonne Barkley, Devin Johnson, Kaitlin Palmer, Selene Fregosi (PIFSC)"
 ---
 
-This project would develop the analytical framework necessary to integrate PAM data from slow-moving passive acoustic recorders, including underwater gliders and drifting acoustic recorders into quantitative assessments of population distribution and density. The PAM and UxS SIs are heavily investing in the testing and development of PAM-equipped gliders and this effort would ensure that those developments are more quickly leveraged to improve cetacean assessments. This project would focus on developing a statistical framework that integrates PAM data from underwater gliders and drifters with existing visual-based species distribution models (SDM) to achieve more accurate ensemble models with seasonal context.
+![](images/SPACIOUS_icon.png){fig-align="center" width=240}
 
-### **Action Items**
+The **SPACIOUS project** (Spatial Population Assessment of Cetaceans Integrating acoustic Observations from Uncrewed Systems) aims to develop the analytical framework necessary to integrate PAM data from slow-moving passive acoustic recorders, including underwater gliders and drifting acoustic recorders, into quantitative assessments of population distribution and density. The PAM and UxS SIs are heavily investing in the testing and development of PAM-equipped gliders and this effort will ensure that those developments are more quickly leveraged to improve cetacean assessments. This project will focus on developing a statistical framework that integrates PAM data from underwater gliders and drifters with existing visual-based species distribution models (SDM) to achieve more accurate ensemble models with seasonal context.
 
-1.  **Evaluate resources required:** Evaluate required funding depending on other proposals and staffing.
 
-2.  **Confer with PAM SI Working Group:** Working Group determines whether there is substantial interest and priority for continued pursuit of this project. If no-go, determine whether the project may be re-evaluated later based on funds available.
 
-3.  **Evaluate state of the science:** Connect with Center for Research into Ecological and Environmental Modelling, Duke, and other colleagues to assess the state of the science.
+### **Project goals**
 
-4.  **Identify datasets and species:** Collect and collate PIFSC, SEFSC, and SWFSC PAM glider data and identify priority species for modeling based on data availability and management needs.
+1. Identify aspects of spatial models and currenty density estimation methods that need modification/supplementation to incorporate slow-moving data
 
-5.  **Assess analytical next steps:** Establish a working group to assess suitable modeling frameworks that fit PAM glider data. Additionally, the PAM SI could convene a workshop or series of workshops that assess the state of the science for incorporating PAM data into species distribution model frameworks in support of this project.
+2. Conduct simulations and/or experiments to address missing model components
+
+3. Develop analytical framework with an initial target species
+
+4. Engage with the PAM glider and modelling communities to assess the state of the science and validate approaches
+
+
+<!-- ### **Action items** -->
+
+<!-- 1.  **Evaluate resources required:** Evaluate required funding depending on other proposals and staffing. -->
+
+<!-- 2.  **Confer with PAM SI Working Group:** Working Group determines whether there is substantial interest and priority for continued pursuit of this project. If no-go, determine whether the project may be re-evaluated later based on funds available. -->
+
+<!-- 3.  **Evaluate state of the science:** Connect with Center for Research into Ecological and Environmental Modelling, Duke, and other colleagues to assess the state of the science. -->
+
+<!-- 4.  **Identify datasets and species:** Collect and collate PIFSC, SEFSC, and SWFSC PAM glider data and identify priority species for modeling based on data availability and management needs. -->
+
+<!-- 5.  **Assess analytical next steps:** Establish a working group to assess suitable modeling frameworks that fit PAM glider data. Additionally, the PAM SI could convene a workshop or series of workshops that assess the state of the science for incorporating PAM data into species distribution model frameworks in support of this project. -->
+
+
+### Team links
+
+*\*may require NOAA Google Drive or GitHub enterprise access*
+
+[PAM-Spacious repository](https://github.com/PIFSC-Protected-Species-Division/PAM-SPACIOUS)
+
+[Acoustic Glider Spatial Modeling Project Google Drive Folder](https://drive.google.com/drive/u/0/folders/13tSbUPhnqMJ6KupfIaAQ7_omoTFf6mBU)
+
+##### Project update slides
+
+[SPACIOUS March 2025 Status Update](https://docs.google.com/presentation/d/1aL-70ErgSfrShO0hvrPcnYKEC1tX26Xq_vS1F9YYBmM/edit#slide=id.p)
+
+[SPACIOUS August 2024 PAM-SI Glider Briefing](https://docs.google.com/presentation/d/1UXxUSBQamcx3KK6Rnc_qemH0M5XTRLnNdvTPX6_i9xM/edit#slide=id.p)
