--- a/index.qmd
+++ b/index.qmd
@@ -2,29 +2,57 @@
 title: "Passive Acoustic Stock Assessment"
 
 page-layout: full
+format:
+  html:
+    toc: false
 ---
 
-## Incorporating Glider Data in a Species Distribution Modeling Framework
+<!-- <style> -->
+<!-- .add-space{ -->
+<!-- padding-right: 6%; -->
+<!-- } -->
+<!-- </style> -->
 
-This project would develop the analytical framework necessary to integrate PAM data from slow-moving passive acoustic recorders, including underwater gliders and drifting acoustic recorders into quantitative assessments of population distribution and density. The PAM and UxS SIs are heavily investing in the testing and development of PAM-equipped gliders and this effort would ensure that those developments are more quickly leveraged to improve cetacean assessments. This project would focus on developing a statistical framework that integrates PAM data from underwater gliders and drifters with existing visual-based species distribution models (SDM) to achieve more accurate ensemble models with seasonal context.
+<!-- ::: {.columns} -->
+<!-- ::: {.column width="69%" .add-space} -->
+
+<!-- parent column with the text --> 
+ 
+::: {.columns}
+::: {.column width="84%"}
+## Incorporating slow-moving recorder data in a species distribution modeling framework
+:::
+::: {.column width="16%"}
+![](content/images/glider_simp_angle-01.png){width="100"}
+:::
+
+:::
+<!-- end nested column -->
+
+
+The **SPACIOUS project** (Spatial Population Assessment of Cetaceans Integrating acoustic Observations from Uncrewed Systems) aims to develop the analytical framework necessary to integrate PAM data from slow-moving passive acoustic recorders, including underwater gliders and drifting acoustic recorders, into quantitative assessments of population distribution and density. The PAM and UxS SIs are heavily investing in the testing and development of PAM-equipped gliders and this effort will ensure that those developments are more quickly leveraged to improve cetacean assessments. This project will focus on developing a statistical framework that integrates PAM data from underwater gliders and drifters with existing visual-based species distribution models (SDM) to achieve more accurate ensemble models with seasonal context.
 
 ### Goal
 
 Advancing the accuracy of stock assessments to capture seasonal and long-term changes in distribution using PAM glider datasets.
 
-### Action Items
+**For more info see the [Mobile recorders page](contents/gliderStocks/qmd)**
 
-1.  **Evaluate resources required:** Evaluate required funding depending on other proposals and staffing.
+---
 
-2.  **Confer with PAM SI Working Group:** Working Group determines whether there is substantial interest and priority for continued pursuit of this project. If no-go, determine whether the project may be re-evaluated later based on funds available.
+::: columns
 
-3.  **Evaluate state of the science:** Connect with Center for Research into Ecological and Environmental Modelling, Duke, and other colleagues to assess the state of the science.
-
-4.  **Identify datasets and species:** Collect and collate PIFSC, SEFSC, and SWFSC PAM glider data and identify priority species for modeling based on data availability and management needs.
-
-5.  **Assess analytical next steps:** Establish a working group to assess suitable modeling frameworks that fit PAM glider data. Additionally, the PAM SI could convene a workshop or series of workshops that assess the state of the science for incorporating PAM data into species distribution model frameworks in support of this project.
-
+::: {.column width="84%"}
 ## Incorporating stationary data into a species distribution modeling framework
+:::
+
+::: {.column width="16%"}
+![](content/images/harp.png){width="100"}
+:::
+
+:::
+
+
 
 This project would support the PAM SI objective of advancing data integration by leveraging stationary PAM data and visual data to improve the accuracy of stock assessments by capturing seasonal and long-term changes. This project would focus on developing a statistical framework for integrating a density model created with stationary PAM data with existing visual-based SDMs to achieve more accurate models with seasonal context. This project may leverage LISTEN GoMex funding to develop models for sperm whales and beaked whales.
 
@@ -43,3 +71,18 @@ Integrating long-term PAM data into species density models to provide seasonal a
 4.  **Establish project team:** Establish working group, potentially including colleagues from Duke University, Fisheries and Oceans Canada, etc., to meet periodically with the LISTEN GoMex team to ensure broad regional relevance.
 
 5.  **Expand capacity:** If funded, advertise post-doc position to support this effort. Alterntively, the PAM SI could convene a workshop or series of workshops that assess the state of the science for incorporating PAM data into species distribution model frameworks in conjunction with Project 1.
+
+<!-- ::: -->
+
+<!-- ::: {.column width="25%"} -->
+
+<!-- <!-- right column with the news --> -->
+
+<!-- ::: {.callout-tip title="News!"} -->
+<!-- Newsworthy Updates! -->
+<!-- ::: -->
+
+<!-- More news coming soon... -->
+
+<!-- ::: -->
+<!-- ::: -->
